# cgeo

./: .gitignore  README.md
gogui/: readme.txt
gogui/cppjson/: CMakeLists.txt
gogui/example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  line  line.cpp  out.json
gogui/example/cppjson/: Makefile  cmake_install.cmake
gogui/gogui_core/include/: active.hpp  common.hpp  container.hpp  history.hpp  line.hpp  point.hpp  print_json.hpp  supervisor.hpp  vector.hpp
gogui/gogui_visualization/: index.html
gogui/gogui_visualization/js/: DataRepository.js  SnapshotsIterator.js  scripts.js
gogui/gogui_visualization/resources/: style.css
lab1/: Makefile  det.cpp  plot.gnu  podsumowanie  predicates.h
lab2/: CMakeLists.txt  Makefile  convex_hull.cpp  datasets.cpp  plot.gnu
lab2/gogui/example/: line  line.cpp
lab3/: CMakeLists.txt  broom.cpp  datasets.cpp
lab4/: CMakeLists.txt  README.md  canvas.html  polygon.cpp
project/: CMakeLists.txt  README.md  datasets.cpp  paint.cpp  range_tree.py
